--- a/public/css/local.css
+++ b/public/css/local.css
@@ -231,6 +231,10 @@ img.autosize {
     white-space: nowrap;
 }
 
+.timeline-item.timeline-selected {
+    box-shadow: 0px 0px 10px 5px black;
+}
+
 div.timeline-foreground > div.timeline-group:nth-of-type(even) {
     background-color: rgba(245, 245, 245, 0.4);
 }
