--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -270,7 +270,7 @@
             [% IF hostlocal %]
                 <script type="text/javascript" src="[% url.js %]/jquery.floatThead-slim.min.js"></script>
             [% ELSE %]
-                <script type="text/javascript" src="[% scheme %]://cdnjs.cloudflare.com/ajax/libs/floatthead/1.2.8/jquery.floatThead-slim.min.js"></script>
+                <script type="text/javascript" src="[% scheme %]://cdnjs.cloudflare.com/ajax/libs/floatthead/2.1.3/jquery.floatThead.min.js"></script>
             [% END %]
         [% END %]
         [% IF page.match("data") %]
