663 Fix table header popup on scroll

--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -154,6 +154,7 @@
                     })
                 });
                 $("#data-table").floatThead({
+                    floatContainerCss: {},
                     zIndex: function($table){
                         return 999;
                     },
