--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -108,7 +108,9 @@
             CASE ['curval', 'autocur'];
                 render_curcommon_datum(col.is_multivalue, col.data, col.name, full_content);
             CASE 'file';
-                full_content = 1 IF render_options == 'semi';
+                IF render_options == 'semi';
+                    full_content = 1;
+                END;
                 render_file_datum(col.data, full_content);
             CASE ['person', 'createdby'];
                 render_person_datum(col.data);
