Remove quotes from password to prevent confusion to users

--- a/views/login.tt
+++ b/views/login.tt
@@ -7,7 +7,7 @@
                     Thank you for visiting [% site_name | html %]. You can now <input type="checkbox" id="reveal_password"><label for="reveal_password">reveal your password.</label>
                     <div class="reveal_area">
                         <p class="new_password">
-                            Your new password is: "[% password %]".
+                            Your new password is: [% password %]
                         </p>
 
                         <p>
