--- a/views/edit.tt
+++ b/views/edit.tt
@@ -27,24 +27,24 @@
 <p></p>
 
 [% BLOCK panel_start %]
-    [% topic = col.column.topic %]
+    [% topic = col_panel.column.topic %]
     [% IF !topic OR topic.initial_state == 'open' %]
         [% open = 1 %]
     [% ELSE %]
         [% open = 0 %]
     [% END %]
-    <div class="panel-group" id="accordion[% col.id %]" role="tablist" aria-multiselectable="true">
+    <div class="panel-group" id="accordion[% col_panel.id %]" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion[% col.id %]"
-                        href="#topic[% col.id %]" aria-expanded="[% IF open %]true[% ELSE %]false[% END %]"
-                        aria-controls="topic[% col.id %]">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion[% col_panel.id %]"
+                        href="#topic[% col_panel.id %]" aria-expanded="[% IF open %]true[% ELSE %]false[% END %]"
+                        aria-controls="topic[% col_panel.id %]">
                         [% topic.name OR 'Other' | html %]
                     </a>
                 </h4>
             </div>
-            <div id="topic[% col.id %]" class="panel-collapse collapse[% IF open %] in[% END %]" role="tabpanel" aria-labelledby="headingOne">
+            <div id="topic[% col_panel.id %]" class="panel-collapse collapse[% IF open %] in[% END %]" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
                     [% IF topic.need_completed_topics_count %]
                         <div role="alert" class="alert alert-warning">
@@ -130,9 +130,9 @@
             [% columns_done = {} %]
             [% click_to_edits = [] %]
 
-            [% FOREACH col IN record_presentation.columns %]
+            [% FOREACH col_panel IN record_presentation.columns %]
                 [% IF layout_edit.has_topics %]
-                    [% IF col.column.topic.id != previous_topic %]
+                    [% IF col_panel.column.topic.id != previous_topic %]
                         [% IF in_panel %]
                             [% PROCESS panel_end %]
                             [% in_panel = 0 %]
@@ -141,11 +141,11 @@
                         [% in_panel = 1 %]
                     [% END %]
                 [% END %]
-                [% PROCESS do_col %]
+                [% PROCESS do_col col = col_panel %]
                 [% IF click_to_edit %]
-                    [% click_to_edits.push(col) %]
+                    [% click_to_edits.push(col_panel) %]
                 [% END %]
-                [% previous_topic = col.column.topic.id %]
+                [% previous_topic = col_panel.column.topic.id %]
             [% END %]
             [% IF layout_edit.has_topics %]
                 [% PROCESS panel_end %]
