Fix line-break after column heading in click-to-edit topics

--- a/public/css/local.css
+++ b/public/css/local.css
@@ -250,3 +250,9 @@ a.sort-link {
 a.sort-link:hover {
     text-decoration: underline;
 }
+
+/* div used by HTML::FromText for retaining line breaks.
+ * Make sure the beginning of text doesn't line break */
+.hft-lines {
+    display: inline;
+}
