Ensure that more-less divs do not wrap away from their heading in click-to-edit topics

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1415,6 +1415,10 @@ small.search_term {
   opacity: 1; }
 
 /* less / more */
+/* Ensure that more-less divs to not wrap away from their heading in click-to-edit topics */
+.more-less {
+  display: inline; }
+
 .more-less.clipped {
   max-height: 60px;
   overflow: hidden; }
