--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -18,6 +18,7 @@
             <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
             <link rel="stylesheet" href="[% scheme %]://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         [% END %]
+        <link rel="stylesheet" href="[% url.css %]/general.css">
 
         <title>[% page %] | Linkspace</title>
 
@@ -310,7 +311,8 @@
         [% END %]
 
         <script src="[% url.js %]/linkspace.js"></script>
-
+        <!--[if IE 8]><script src="[% url.js %]/dashboard-ie8-fallback.js"></script><![endif]-->
+        <!--[if !IE 8]><!--><script src="[% url.js %]/general.js"></script><!--<![endif]-->
     </body>
 </html>
 
