--- a/views/record.tt
+++ b/views/record.tt
@@ -22,7 +22,7 @@
         [% ELSE %]
             [% history_link = "history" %]
         [% END %]
-        [% FOREACH version IN versions %]
+        [% FOREACH version IN record.versions %]
             <li [% IF version.id == record.record_id %]class="active"[% END %] role="presentation">
                 <a role="menuitem" tabindex="-1" href="/[% history_link %]/[% version.id %]">[% version.created %]
                     [% IF version.createdby %]
